# agabisfastapitask

./: .gitignore  create_tables.py  crud.py  database.py  docker-compose.yml  main.py  models.py  pyproject.toml  requirements.txt  schemas.py
app/: .env  .env.template  create_tables.py  crud.py  main.py
app/core/: config.py  models.py
app/core/models/: __init__.py  base.py  db_helper.py  student.py
app/student/: create_tables.py
app/utils/: __init__.py  case_converter.py
